--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,11 @@ h3 {
     border-radius: 28px;
     background-color: #030303;
     text-align: center;
+    cursor: pointer;
+}
+
+.btn_a:hover, .btn_a:focus {
+    background-color: #755CDE;
 }
 
 .caption {
@@ -167,6 +172,10 @@ h3 {
 
 .btn_orange {
     background-color: #EB7565;
+}
+
+.btn_orange:hover, .btn_orange:focus {
+    background-color: #F6A560;
 }
 
 .slider {
