--- a/styles/style.css
+++ b/styles/style.css
@@ -194,18 +194,25 @@ h3 {
 
 .slider_wrapper {
     overflow: hidden;
-    width: 100vw;
     height: 360px;
 }
 
 .slides {
-    margin: 56px 0;
-    display: flex;
-    gap: 30px;
+    position: relative;
+    width: 100%;
+    height: 360px;
 }
 
-.slide > img {
-    border-radius: 10px;
+.slide {
+    width: 100%;
+    height: 360px;
+    position: absolute;
+    transition: 500ms; 
+}
+
+.slide img {
+    width: 100%;
+    height: 360px;
 }
 
 .arrows {
@@ -224,6 +231,7 @@ h3 {
 }
 
 .btn_left, .btn_right {
+    border: none;
     width: 64px;
     height: 64px;
     border-radius: 38px;
@@ -232,6 +240,7 @@ h3 {
 }
 
 .btn_left:hover, .btn_right:hover {
+    border: none;
     background-color: #755CDE;
 }
 
@@ -267,9 +276,24 @@ h3 {
     margin-bottom: 64px;
 }
 
-@media  and (max-width: 768px) {
+@media screen and (max-width: 768px) {
+    h1 {
+        font-size: 44px;
+        line-height: 55px;
+    }
+
+    h2 {
+        font-size: 32px;
+        line-height: 40px;
+    }
+
     .wrapper {
         margin: 0 auto;
         max-width: 690px;
+        padding: 0 39px;
+    }
+
+    .photo {
+        height: 364px;
     }
 }
