--- a/styles/style.css
+++ b/styles/style.css
@@ -183,6 +183,7 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 56px;
 }
 
 .title_slider {
@@ -193,26 +194,17 @@ h3 {
 }
 
 .slider_wrapper {
-    overflow: hidden;
     height: 360px;
+    width: 100vw;
+    position: relative;
 }
 
 .slides {
-    position: relative;
-    width: 100%;
-    height: 360px;
-}
-
-.slide {
-    width: 100%;
-    height: 360px;
+    height: inherit;
     position: absolute;
-    transition: 500ms; 
-}
-
-.slide img {
-    width: 100%;
-    height: 360px;
+    left: ;
+    display: flex;
+    gap: 30px;
 }
 
 .arrows {
