--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap');
 
 body {
+    overflow-x: hidden;
     background-color: #FFF7F0;
     font-family: 'Plus Jakarta Sans', sans-serif;
 }
@@ -202,7 +203,8 @@ h3 {
 .slides {
     height: inherit;
     position: absolute;
-    left: ;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     gap: 30px;
 }
