--- a/styles/style.css
+++ b/styles/style.css
@@ -179,7 +179,7 @@ h3 {
     background-color: #F6A560;
 }
 
-.slider {
+.slides {
     margin-bottom: 88px;
     display: flex;
     flex-direction: column;
@@ -194,20 +194,20 @@ h3 {
     color: #030303;
 }
 
-.slider_wrapper {
+/*.slider_wrapper {
     height: 360px;
     width: 100vw;
     position: relative;
-}
+}*/
 
-.slides {
+/*.slides {
     height: inherit;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
     gap: 30px;
-}
+}*/
 
 .arrows {
     margin: 0 auto;
