--- a/styles/slick-style.css
+++ b/styles/slick-style.css
@@ -39,3 +39,10 @@
     background-color: #030303;
     cursor: pointer;
 }
+
+@media screen and (max-width: 480px) {
+    .slide {
+        max-width: 270px;
+        margin: 0 15px 0 0;
+    }
+}
