--- a/styles/style.css
+++ b/styles/style.css
@@ -160,6 +160,7 @@ h3 {
 }
 
 .about_text {
+    margin-left: 30px;
     max-width: 540px;
 }
 
@@ -198,7 +199,7 @@ h3 {
 .call {
     background-color: #030303;
     border-radius: 10px;
-    padding: 80px 95px 80px 65px;
+    padding: 80px 65px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -206,6 +207,7 @@ h3 {
 }
 
 .call_text {
+    margin-right: 30px;
     max-width: 540px;
 }
 
@@ -227,7 +229,7 @@ h3 {
     margin-bottom: 64px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 769px) {
     h1 {
         font-size: 44px;
         line-height: 55px;
@@ -258,31 +260,37 @@ h3 {
     }
 
     .graphic_design {
+        order: 0;
         grid-column: span 6;
         grid-row: span 4;
     }
     
     .ui_ux {
+        order: 1;
         grid-column: span 3;
         grid-row: span 2;
     }
     
     .apps {
+        order: 2;
         grid-column: span 3;
         grid-row: span 2;
     }
     
     .photography {
+        order: 4;
         grid-column: span 6;
         grid-row: span 2;
     }
     
     .illustrations {
+        order: 3;
         grid-column: span 6;
         grid-row: span 2;
     }
     
     .motion_graphics {
+        order: 5;
         grid-column: span 6;
         grid-row: span 2;
     }
@@ -329,4 +337,131 @@ h3 {
         text-align: center;
         margin-bottom: 25px;
     }
+}
+
+@media screen and (max-width: 480px) {
+    h1 {
+        font-size: 36px;
+        line-height: 45px;
+        text-align: center;
+    }
+
+    h2 {
+        font-size: 26px;
+        line-height: 33px;
+    }
+
+    .wrapper {
+        margin: 0 auto;
+        max-width: 342px;
+        padding: 0 16px;
+    }
+
+    .header {
+        margin-top: 16px;
+        margin-bottom: 32px;
+    }
+
+    .pic {
+        width: 48px;
+        height: 48px;
+    }
+    
+    .btn_a {
+        font-size: 14px;
+        padding: 13px 28px;
+    }
+
+    .caption {
+        margin-bottom: 32px;
+    }
+
+    .description {
+        max-width: 285px;
+    }
+
+    .cards {
+        height: 1164px;
+        margin-bottom: 100px;
+    }
+
+    .graphic_design {
+        grid-column: span 12;
+        grid-row: span 2;
+    }
+    
+    .ui_ux {
+        grid-column: span 6;
+        grid-row: span 1;
+    }
+    
+    .apps {
+        grid-column: span 6;
+        grid-row: span 1;
+    }
+    
+    .photography {
+        grid-column: span 12;
+        grid-row: span 1;
+    }
+    
+    .illustrations {
+        grid-column: span 12;
+        grid-row: span 1;
+    }
+    
+    .motion_graphics {
+        grid-column: span 12;
+        grid-row: span 1;
+    }
+
+    .about {
+        height: inherit;
+        min-width: 100%;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-bottom: 100px;
+        margin-left: 0;
+    }
+
+    .photo {
+        width: 300px;
+        height: 300px;
+        margin-bottom: 40px;
+    }
+
+    .about_text {
+        text-align: center;
+    }
+
+    .description_about {
+        text-align: center;
+        margin-bottom: 24px;
+    }
+
+    .slides {
+        margin-bottom: 100px;
+    }
+
+    .call {
+        padding: 49px 24px;
+        margin-bottom: 40px;
+    }
+
+    .call_text {
+        margin-bottom: 24px;
+        margin-right: 0;
+    }
+
+    .call_description {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 26px;
+        margin-bottom: 24px;
+    }
+
+    .footer {
+        margin-bottom: 32px;
+    }
+    
 }
